# LinkedIn-Automation-for-Auralistics

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
src/linkedin_agent/: __main__.py  api.py  banned_phrases.py  config.py  gemini_fallback.py  graph.py
src/linkedin_agent/brainstorm/: __init__.py  angle_scorer.py  brainstorm_node.py  dedup.py  pipeline.py
src/linkedin_agent/ideation/: pipeline.py  signals.py  trend_discovery.py
src/linkedin_agent/nodes/: authenticity_node.py  draft_node.py  search_node.py
src/linkedin_agent/prompts/: authenticity_prompt.py  few_shot_examples.py  ideation_prompt.py  system_prompt.py
src/linkedin_agent/scoring/: rubric.py  scoring_node.py
src/linkedin_agent/storage/: db_client.py  mongodb_client.py  supabase_client.py  task_store.py
src/linkedin_agent/templates/: index.html
src/linkedin_agent/themes/: pipeline.py  prompts.py
tests/: test_api.py  test_authenticity.py  test_graph.py  test_review.py  test_setup.py
