[project]
name = "linkedin-agent"
version = "0.1.0"
description = "LinkedIn Content Agent — LangGraph pipeline for drafting posts"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.2.7",
    "langchain-google-genai>=4.2.6",
    "tavily-python>=0.7.26",
    "python-dotenv>=1.2.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
