[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "linkedin-agent"
version = "0.1.0"
description = "LinkedIn Content Agent — LangGraph pipeline for drafting posts"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.2.7",
    "langchain-google-genai>=4.2.6",
    "tavily-python>=0.7.26",
    "python-dotenv>=1.2.2",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.15",
    "lxml>=5.3",
    "openai>=1.55.0",
    "pinecone>=9.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
